# fs2-grpc

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  common_protos.bzl  dependencies.bzl  maven_install.json
codegen/src/main/scala/fs2/grpc/codegen/: Fs2CodeGenerator.scala
protopkg/: genprotopkg.bzl
toolchains/: BUILD.bazel  default_toolchains.bzl
validate/: BUILD.bazel
