load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
load("@scala_things//:flags/flags.bzl", "flags")

scala_library(
    name = "codegen",
    srcs = glob(["codegen/**/*.scala"]),
    unused_dependency_checker_ignored_targets = ["@maven//:com_thesamet_scalapb_protoc_gen_2_13"],
    visibility = ["//visibility:public"],
    deps = [
        # "@scalapb//:compiler_plugin",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:com_thesamet_scalapb_compilerplugin_2_13",
        "@maven//:com_thesamet_scalapb_protoc_gen_2_13",
        # "@maven//:org_scala_lang_modules_scala_collection_compat_2_13",
        # "@maven//:com_thesamet_scalapb_protoc_gen_2_13",
        # "@maven//:com_thesamet_scalapb_protoc_bridge_2_13",
        "@maven//:com_google_protobuf_protobuf_java",

        # "@maven//:org_typelevel_protoc_gen_fs2_grpc",
        # "@maven//:org_typelevel_fs2_grpc_runtime_2_13",
        # "@maven//:io_grpc_grpc_api",
        # "@maven//:io_grpc_grpc_context",
        # "@maven//:com_google_api_grpc_proto_google_iam_v1",
        # "@maven//:com_google_api_grpc_proto_google_common_protos",

        # "@maven//:com_thesamet_scalapb_scalapb_runtime_2_13",
        # "@maven//:com_thesamet_scalapb_compilerplugin_2_13",
        # "@maven//:com_thesamet_scalapb_protoc_gen_2_13",
        # "@maven//:com_thesamet_scalapb_protoc_bridge_2_13",
        # "@maven//:com_thesamet_scalapb_lenses_2_13",
        # "@maven//:com_thesamet_scalapb_protoc_bridge_2_12",
    ],
)

scala_library(
    name = "runtime",
    srcs = glob(["runtime/src/main/**/*.scala"]),
    plugins = [
        "@maven//:org_typelevel_kind_projector_2_13_11",
    ],
    unused_dependency_checker_ignored_targets = ["@maven//:com_thesamet_scalapb_protoc_gen_2_13"],
    scalacopts = flags,
    visibility = ["//visibility:public"],
    deps = [
        # "@scalapb//:compiler_plugin",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:com_thesamet_scalapb_protoc_gen_2_13",
        "@maven//:io_grpc_grpc_api",
        "@maven//:org_typelevel_cats_effect_2_13",
        "@maven//:org_typelevel_cats_effect_kernel_2_13",
        "@maven//:org_typelevel_cats_effect_std_2_13",
        "@maven//:org_typelevel_cats_core_2_13",
        "@maven//:co_fs2_fs2_core_2_13",
    ],
)
