# load("@io_bazel_rules_scala//scala:scala.bzl", "scala_library")
# load("@scala_things//:flags/flags.bzl", "flags")

# scala_library(
#     name = "codegen",
#     srcs = glob(["codegen/**/*.scala"]),
#     unused_dependency_checker_ignored_targets = ["@maven//:com_thesamet_scalapb_protoc_gen_2_13"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "@maven//:org_scala_lang_scala_library",
#         "@maven//:com_thesamet_scalapb_compilerplugin_2_13",
#         "@maven//:com_thesamet_scalapb_protoc_gen_2_13",
#         "@maven//:com_google_protobuf_protobuf_java",
#     ],
# )

# scala_library(
#     name = "runtime",
#     srcs = glob(["runtime/src/main/**/*.scala"]),
#     scalacopts = flags,
#     visibility = ["//visibility:public"],
#     deps = [
#         "@maven//:org_scala_lang_scala_library",
#         "@maven//:io_grpc_grpc_api",
#         "@maven//:org_typelevel_cats_effect_3",
#         "@maven//:org_typelevel_cats_effect_kernel_3",
#         "@maven//:org_typelevel_cats_effect_std_3",
#         "@maven//:org_typelevel_cats_core_3",
#         "@maven//:co_fs2_fs2_core_3",
#     ],
# )
